feat(repo): рефакториинг репозитория
